test/tests/stages/6_statements_and_conditional_expressions/valid/if_taken.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(0)
  ;
  if
  (
  identifier(a)
  )
  identifier(b)
  =
  const int(1)
  ;
  return
  identifier(b)
  ;
  }
