test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/invalid_var_in_if.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const int(1)
  )
  return
  identifier(c)
  ;
  int
  identifier(c)
  =
  const int(0)
  ;
  }
